# algorithms

./: .gitignore
BeautyOfProgram/: BitMap.cpp  BitMap.h  BitOperations.cpp  CMakeLists.txt  FastestKilometreSpeed.cpp  GraphColoring.cpp  GraphColoring.h  MatchEngine.cpp  Matrix.cpp  MergeSortedLists.cpp  MinDistancePointPair.cpp  MinDistancePointPair.h  MyUtility.h  MythOfNumbers.cpp  MythOfNumbers.h  PackageProblem.cpp  PackageProblem.h  PacketDecrypt.cpp  PrefixSorting.cpp  PrefixSorting.h  QueueWithMax.cpp  QueueWithMax.h  ReservoirSampling.cpp  SkipList.cpp  StockProfit.cpp  StringHandle.cpp  SystemInfo.cpp  SystemInfo.h  ThreadedTree.cpp  TreeHandle.cpp  TreeHandle.h  main.cpp  maze.cpp  myutility.cpp  myutility.h  permutation.cpp  probability.cpp  stringhandle.cpp  stringhandle.h
BeautyOfProgram/big_data/: consistent_hash.cpp  count_min_sketch.cpp  dimensionality_reduction.cpp  distinct_element_count.cpp  heavy_hitter.cpp
BeautyOfProgram/include/: Algebra.h  Hashes.h  MyUtility.h  TestHelper.h
BeautyOfProgram/interview/: LegoUnit.cpp  LegoUnit.test.txt
BeautyOfProgram/match/: MatchEngine.cpp  MatchEngine1.cpp
KTL/: CMakeLists.txt  README
KTL/src/: CMakeLists.txt  main.cpp
KTL/src/adapter/: priority_queue.h  queue.h  stack.h
KTL/src/algorithm/: algo_common.h  algo_copy.h  algo_equal.h  algo_fill.h  algo_find.h  algo_heap.h  algo_math.h  algo_numeric.h  algorithm.h
KTL/src/allocator/: alloc.cpp  alloc.h  allocator.h  construct.h  uninitialized.h
KTL/src/associative/: FlatMap.h  RBtreeIterator.h  map.h  rbtree.h  set.h
KTL/src/functional/: func_common.h  func_logical.h  func_math.h  func_relational.h  func_selector.h  functional.h
KTL/src/iterator/: insert_iterator.h  iterator.h  typetraits.h
KTL/src/sequence/: deque.h  list.h  vector.h
KTL/src/util/: display.h  pair.h
KTL/test/: CMakeLists.txt
KTL/test/adapter/: test_priority_queue.cpp  test_queue.cpp  test_stack.cpp
KTL/test/algorithm/: test_heap.cpp  test_numeric.cpp
KTL/test/associative/: test_flat_map.cpp  test_map.cpp  test_rbtree.cpp  test_set.cpp
KTL/test/functional/: test_functional.cpp
KTL/test/iterator/: test_insert_iterator.cpp  test_reverse_iterator.cpp
KTL/test/sequence/: test_deque.cpp  test_list.cpp  test_vector.cpp
MachineLearning/: GradientDescent.cpp  GradientDescent.h  LogisticRegression.cpp  LogisticRegression.h  Matrix.h  NeuralNetwork.cpp  NeuralNetwork.h  PSO.cpp  PSO.h  Vector.h  colors.txt  logistic_tumor_size_data.txt  main.cpp
MyAlgorithm/: AStar.h  AStarMap.txt  AddFactor.h  BinarySearchTree.h  BinaryTree.h  BinomialHeap.h  CMakeLists.txt  DAG.h  Deap.h  DenseGraph.h  EggDropPuzzle.h  FibonacciHeap.h  HashTable.h  KMP.h  LongestCommonString.h  MatrixMultiple.h  MaxFlow.h  MaxHeap.h  MaxSumSubVector.h  MinHeap.h  NetworkFlow_Dense.h  RedBlackTree.h  Set.h  SortAlgorithm.h  SparseGraph.h  SuffixArray.h  TrieTree.h  VisualAssist.h  Viterbi.h  ViterbiConf.txt  all.h  graph_MST_Kruskal.h  graph_MST_Prim.h  leftist.h  main.cpp  perm.h  postfixedexp.h  slist.h  utilities.h
MyAlgorithm/play/: CMakeLists.txt  perf_trb_tree.cpp
MyAlgorithm/src/: CMakeLists.txt  utilities.cpp  utilities.h
MyAlgorithm/src/brutal_force/: AddFactor.h
MyAlgorithm/src/data_structure/: HashTable.h  Set.h  SingleList.h  SortAlgorithm.h
MyAlgorithm/src/data_structure/deque/: WindowMax.h
MyAlgorithm/src/data_structure/graph/: DAG.h  DenseGraph.h  MstKruskal.h  MstPrim.h  SparseGraph.h
MyAlgorithm/src/data_structure/heap/: BinomialHeap.h  Deap.h  FibonacciHeap.h  MaxHeap.h  MinHeap.h
MyAlgorithm/src/data_structure/stack/: MinStack.h
MyAlgorithm/src/data_structure/tree/: BinarySearchTree.h  BinaryTree.h  Leftist.h  RedBlackTree.h  threaded_rbtree.h  threaded_rbtree_hash.h
MyAlgorithm/src/dynamic_programming/: EggDropPuzzle.h  LongestCommonString.h  MatrixMultiple.h  MinSumPathOfMatrix.h  Viterbi.h
MyAlgorithm/src/heuristic/: AStar.h
MyAlgorithm/src/math/: MaxLengthSubArray.h  MaxSubMatrix.h  MaxSumSubVector.cpp  MaxSumSubVector.h  PostfixExpression.h  ReverseInteger.h
MyAlgorithm/src/pattern/disruptor/: ClaimStrategy.h  RingBuffer.h  Sequence.h  SequenceBarrier.h  Sequencer.h  WaitStrategy.h  utils.h
MyAlgorithm/src/string/: KMP.h  TrieTree.h
MyAlgorithm/test/: CMakeLists.txt  prepare.sh
MyAlgorithm/test/brutal_force/: TestAddFactor.cpp
MyAlgorithm/test/data_structure/: TestHashTable.cpp  TestSet.cpp  TestSingleList.cpp  TestSort.cpp
MyAlgorithm/test/data_structure/deque/: TestWindowMax.cpp
MyAlgorithm/test/data_structure/graph/: TestDag.cpp  TestDenseGraph.cpp  TestKruskal.cpp  TestPrim.cpp  TestSparseGraph.cpp
MyAlgorithm/test/data_structure/heap/: TestBinomialHeap.cpp  TestDeap.cpp  TestFibonacciHeap.cpp  TestMaxHeap.cpp  TestMinHeap.cpp
MyAlgorithm/test/data_structure/stack/: TestMinStack.cpp
MyAlgorithm/test/data_structure/tree/: TestBinarySearchTree.cpp  TestBinaryTree.cpp  TestLeftist.cpp  TestRedBlackTree.cpp
MyAlgorithm/test/dynamic_programming/: TestEggDropPuzzle.cpp  TestLongestCommonString.cpp  TestMatrixMultiple.cpp  TestMinSumPathOfMatrix.cpp  TestViterbi.cpp
MyAlgorithm/test/heuristic/: AStarMap1.txt  TestAStar.cpp
MyAlgorithm/test/math/: TestMaxLengthSubArray.cpp  TestMaxSubMatrix.cpp  TestMaxSumSubVector.cpp  TestPostfixExpression.cpp  TestReverseInteger.cpp
MyAlgorithm/test/pattern/disruptor/: TestClaimStrategy.cpp  TestRingBuffer.cpp  TestSequence.cpp  TestSequenceBarrier.cpp  TestSequencer.cpp  TestWaitStrategy.cpp
MyAlgorithm/test/string/: TestKmp.cpp  TestTrieTree.cpp
metaheuristic/: ga.cpp  pso.cpp  simulated_annealing.cpp
